03-services-networking/01-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: alpha
spec:
  replicas: 2
  selector: 
    matchLabels:
      env: staging
      tier: frontend
  template:
    metadata:
      labels:
        env: staging
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports: 
        - containerPort: 80
