03-services-networking/03-deployment-curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      env: debug
  template:
    metadata:
      labels:
        env: debug
    spec:
      containers:
      - name: curl-container
        image: rancher/curlimages-curl:7.73.0
        command: ['sh','-c','tail -f /dev/null']
