03-services-networking/09-deployment-dependent-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:        
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["sh", "-c", "tail -f /dev/null"]
      restartPolicy: Always
