03-services-networking/05-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: alpha
spec:
  ingressClassName: nginx
  rules:
  - host: test.whizlabsk8s.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 8000
