03-services-networking/07-ingress-multihost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multihost-ingress
  namespace: alpha
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.whizlabsk8s.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 8000
  - host: tomcat.whizlabsk8s.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: tomcat-service
            port:
              number: 8080
