03-services-networking/08-ingress-fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multihost-ingress
  namespace: alpha
spec:
  ingressClassName: nginx
  rules:
  - host: fanout.whizlabsk8s.online
    http:
      paths:
      - pathType: Prefix
        path: "/index"
        backend:
          service:
            name: nginx-service
            port: 
              number: 8000
      - pathType: Prefix
        path: "/docs"
        backend:
          service: 
            name: tomcat-service
            port:
              number: 8080
